--- a/index.html
+++ b/index.html
@@ -44,3 +44,8 @@
     </body>
 
 </html>
+
+<!-- AS, AP, JL 
+Figure out how to keep pic from moving down when results display.
+Add a parInt to round results
+Include CSS-->
